fix history creation process

--- a/server/themes/one-page-new-age/templates/server/history/create.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/create.hbs
@@ -13,4 +13,4 @@
 }}
 
 <h1>Qual é a sua história?</h1>
-{{{form 'history-create' data validationError}}}
+{{{form 'history-create' data validationError action="/history/create"}}}
