fix login page text

--- a/server/themes/one-page-new-age/templates/server/auth/login.hbs
+++ b/server/themes/one-page-new-age/templates/server/auth/login.hbs
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="login-with-email">
-          <div class="login-with-email-title">Ou use o seu CFP e senha:</div>
+          <div class="login-with-email-title">Ou use o seu CPF e senha:</div>
           {{{form 'login' user}}}
         </div>
       </div>
