add redescola link in footer

--- a/server/themes/one-page-new-age/templates/server/partials/footer.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/footer.hbs
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-md-6 footer-logos text-right">
-        <img src="/public/project/logo-redescola.png" />
+        <a href="http://rededeescolas.ensp.fiocruz.br/" target="_blank"><img src="/public/project/logo-redescola.png" alt="Rede de escolas" /></a>
       </div>
     </div>
     <div class="row text-center">
