add some logo and tpl updates

--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -381,6 +381,15 @@ img[style="float:right;"] {
   // font
 }
 
+.footer-logos {
+  img {
+    max-height: 40px;
+    padding: 0px 5px;
+  }
+}
+
+
+
 .widget-pinion {
   background-color: #D84B35;
   margin: 0px !important;
