--- a/server/themes/one-page-new-age/templates/server/partials/footer.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/footer.hbs
@@ -18,6 +18,8 @@
       </div>
       <div class="col-md-6 footer-logos text-right">
         <a href="http://rededeescolas.ensp.fiocruz.br/" target="_blank"><img src="/public/project/logo-redescola.png" alt="Rede de escolas" /></a>
+        <a href="http://www.ensp.fiocruz.br/" target="_blank"><img src="/public/project/ensp-logo.png" alt="Escola Nacional de Saúde Pública Sérgio Arouca" /></a>
+        <a href="http://www.fiocruz.br/" target="_blank"><img src="/public/project/fiocruz-logo.png" alt="Fundação Oswaldo Cruz" /></a>
       </div>
     </div>
     <div class="row text-center">
