--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -300,6 +300,8 @@ img[style="float:right;"] {
   padding-top: 55px;
 
   .avatar-item {
+    display: block;
+    margin-bottom: 20px;
     text-align: center;
 
     .wn-avatar-image {
@@ -367,6 +369,7 @@ img[style="float:right;"] {
       // margin-right: 10px;
       width: 50px;
       height: 45px;
+      margin: 0px 6px;
 
       a {
         color: #272727;
@@ -384,7 +387,7 @@ img[style="float:right;"] {
 .footer-logos {
   img {
     max-height: 40px;
-    padding: 0px 5px;
+    padding: 0px 10px;
   }
 }
 
