--- a/server/themes/one-page-new-age/files/less/theme/user.less
+++ b/server/themes/one-page-new-age/files/less/theme/user.less
@@ -100,12 +100,12 @@
 }
 
 .user-location-data {
+  margin-bottom: 10px;
   // text-align: center;
   // font-weight: 700;
   // padding: 10px 5px;
   // border: 1px solid #ddd;
   // border-radius: 4px;
-  // margin: 10px auto;
 }
 
 .user-teaser-item {
