--- a/server/themes/one-page-new-age/templates/server/comment/teaser.hbs
+++ b/server/themes/one-page-new-age/templates/server/comment/teaser.hbs
@@ -1,5 +1,5 @@
 <div id="comment-{{record.id}}" class="comment-teaser" data-we-model="comment" data-we-modelId="{{record.id}}" >
-  {{#if record.creator}}
+  {{#if record.creatorId}}
     {{#link-to 'user.findOne' record.creatorId class="comment-creator-avatar pull-left"}}
       {{we-avatar id=record.creatorId style='thumbnail' class="media-object" width="20px"}}
     {{/link-to}}
