add search fields

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -27,10 +27,27 @@
     text-align: center;
   }
 
+  .input-group,
+  .form-group {
+    margin-bottom: 10px;
+  }
+
   input {
-    width: 350px !important;
+    // width: 350px !important;
+    margin-right: 8px;
     border: 1px solid #ccc5b9;
   }
+
+  .checkbox {
+    margin-left: 4px;
+  }
+
+  .midia-group {
+    input {
+      margin-right: 0px;
+    }
+  }
+
 }
 
 .ht-title {
