--- a/server/themes/one-page-new-age/templates/server/history/teaser.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/teaser.hbs
@@ -16,7 +16,7 @@
   <div class="panel-body">
     {{#link-to-record record=record}}
       <h2 class="ht-title">
-        {{record.title}} {{#unless record.published}} <small><span class="label label-warning">Despublicado</span></small> {{/unless}}
+        {{record.title}} {{#unless record.published}} <small><span class="label label-warning">Aguardando Publicação</span></small> {{/unless}}
       </h2>
     {{/link-to-record}}
     <div class="ht-creator-meta">
