add share links

--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -516,3 +516,32 @@ body.body-main-index {
 .widget-fb-page {
   margin-top: 20px;
 }
+
+.history-meta-share {
+  .history-metadata {
+    padding-top: 5px;
+    display: inline-block;
+    font-size: 12px;
+  }
+
+  a {
+    float: right;
+
+    img {
+      width: 30px;
+    }
+  }
+}
+
+@media (max-width: 374px) {
+  .history-meta-share {
+    .history-metadata {
+      display: block;
+      margin-bottom: 3px;
+    }
+    a {
+      float: none;
+    }
+
+  }
+}
