add my history in user menu and improve history.findOne css

--- a/server/themes/one-page-new-age/files/public/style-default-source.css
+++ b/server/themes/one-page-new-age/files/public/style-default-source.css
@@ -8015,6 +8015,9 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
 .history-findOne .history-videos {
   margin-top: 10px;
 }
+.history-body {
+  padding-top: 10px;
+}
 .social-logins {
   border-bottom: 1px solid #ddd;
   padding-bottom: 10px;
