add history actions in history list

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -16,8 +16,17 @@
 }
 
 .history-findAll-header {
+  margin-bottom: 5px;
+}
+
+.history-findAll-actions {
+  // padding-top: 8px;
+  // margin-top: 12px;
+  // border-top: 1px solid #ddd;
+
   border-bottom: 1px solid #ddd;
-  margin-bottom: 30px;
+  padding-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .history-search {
