improve admin and site search

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -136,3 +136,17 @@
 .history-body {
   padding-top: 10px;
 }
+
+.location-search-area {
+  .select2-container {
+    min-width: 190px;
+    text-align: left;
+  }
+}
+
+.history-search {
+  label {
+    margin-left: 6px;
+    padding-right: 4px;
+  }
+}
